Add autoloading information

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,8 @@
             "name": "Ingo Pfennigstorf",
             "email": "i.pfennigstorf@gmail.com"
         }
-    ]
+    ],
+    "autoload": {
+       "psr-4": { "Subugoe\\ResolverBundle\\": "" }
+    }
 }
