Add basic models

--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,8 @@
     ],
     "autoload": {
        "psr-4": { "Subugoe\\ResolverBundle\\": "" }
+    },
+    "require": {
+        "jms/serializer-bundle": "^2.0"
     }
 }
