Add proper exception class

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
        "psr-4": { "Subugoe\\ResolverBundle\\": "" }
     },
     "require": {
-        "jms/serializer-bundle": "^2.0"
+        "jms/serializer-bundle": "^2.0",
+        "subugoe/find-bundle": "^1.1"
     }
 }
