--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,6 @@
        "psr-4": { "Subugoe\\ResolverBundle\\": "" }
     },
     "require": {
-        "jms/serializer-bundle": "^2.0"
+        "jms/serializer-bundle": "^2.0 || ^3.0"
     }
 }
