Remove dependencies to FindBundle

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,5 +1,6 @@
 services:
-    Subugoe\ResolverBundle\Service\ResolverService:
+    Subugoe\ResolverBundle\Service\ResolverServiceInterface:
+      class: Subugoe\ResolverBundle\Service\ResolverService
       autoconfigure: true
       autowire: true
       calls:
